# releaseherald

./: .gitignore  README.md  dodo.py  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: release.yml  scorecards.yml  test-pr.yml
docs/: .pages  configuration.md  version_template.md
example_plugin/releaseherald_demo_plugin/: plugin.py
release_notes/: release_notes.template.md  release_notes_version.template.md
release_notes/news_fragments/: drop_old_python.md  update_tag_selection.md
src/releaseherald/: configuration.py  main.py
src/releaseherald/plugins/: __init__.py  base.py  hookspecs.py  interface.py  latest_filter.py  metadata_extractor.py  plugin_config.py  submodules.py
tests/: .gitignore  conftest.py  test_repo.pack
tests/functional/: test_output.py
tests/unit/: test_config.py
